--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,8 @@ footer{
     width: 570px;
     vertical-align: middle;
     background-color: #F2F2F2;
+    display: inline-block;
+    object-fit: contain;
     
 }
 
@@ -103,7 +105,7 @@ footer{
 
 
 .article_text{
-    width: 355px;
+    width: 400px;
     object-fit: contain;
     padding-bottom: 53px;
     
@@ -184,7 +186,12 @@ footer{
 
 }
 
-.news_article{
+.news_container{
     width: 1300;
     object-fit: contain;
+}
+
+.news_article{
+    width: 355px;
+    display: flex;
 }
